--- a/cluster/apps/networking/kustomization.yaml
+++ b/cluster/apps/networking/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 resources:
   - cloudflare-ddns
   - traefik
-  # - k8s-gateway
-  # - metallb
+  - k8s-gateway
+  - metallb
+  - external-dns
