--- a/cluster/apps/networking/metallb/helm-release.yaml
+++ b/cluster/apps/networking/metallb/helm-release.yaml
@@ -15,12 +15,17 @@ spec:
         name: metallb
         namespace: flux-system
   install:
-    createNamespace: true
-    remediation:
-      retries: 5
+    remediation: # perform remediation when helm install fails
+      retries: 3
   upgrade:
-    remediation:
-      retries: 5
+    remediation: # perform remediation when helm upgrade fails
+      retries: 3
+      remediateLastFailure: true # remediate the last failure, when no retries remain
+    cleanupOnFail: true
+  rollback:
+    timeout: 5m
+    recreate: true
+    cleanupOnFail: true
   values:
     configInline:
       address-pools:
