--- a/cluster/apps/networking/traefik/middlewares/cloudflare-only.yaml
+++ b/cluster/apps/networking/traefik/middlewares/cloudflare-only.yaml
@@ -5,6 +5,7 @@ metadata:
   name: cloudflare-ips
   namespace: networking
 spec:
+  # list of cloudflare IPs to choose from 
   # https://www.cloudflare.com/ips/
   ipWhiteList:
     sourceRange:
@@ -30,7 +31,7 @@ spec:
       - 2405:8100::/32
       - 2a06:98c0::/29
       - 2c0f:f248::/32
-      # include rfc1918 ranges since traefik chains do not support OR operations
+      # Issues 
       # https://github.com/traefik/traefik/issues/6007
       - 10.0.0.0/8
       - 172.16.0.0/12
