--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -14,6 +14,7 @@ spec:
         kind: HelmRepository
         name: traefik
         namespace: flux-system
+        version: latest
       interval: 15m
   install:
     createNamespace: true
