--- a/cluster/apps/monitoring/flux/secret.sops.yaml
+++ b/cluster/apps/monitoring/flux/secret.sops.yaml
@@ -1,7 +1,27 @@
 apiVersion: v1
 data:
-    address: "" 
+    address: ENC[AES256_GCM,data:+utR9DyhF/seY0fPp/rbhKGSGUpUUl53KoFwwYBm4Z6CtoQyV9fytrIHYBPUJcGfWSuqKgFumZxEtLlbP2wpQlk8elQ6YPwG0A0QjFdpV0E4dgoGVvWmncLyzrdaVnY80A5M8DN4XWpr1/DgHff+mo/rjcogL1AG,iv:qqmgFtUuRvAd/gqe956cumznd0+la+T3RkGT8ZGD4Ko=,tag:07oCC3QoklGqcI8rP29e9w==,type:str]
 kind: Secret
 metadata:
     name: discord-webhook-url
     namespace: monitoring
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUbmI4NTB1ckF5NGJUMER3
+            YVFVenFQVmcrTXVWTC9peWZ3LzhHQXJVT1dnClZHb2FRQVYvUkFiQnRFd0NYTCsw
+            R2JlbFZCbitvMFkzc2cxblR6b0RhOEUKLS0tIHVvWExZK2tUMlpPOFR2bnoxVW9Z
+            eXRNTDh3WWk2Wm1kcllWZ000V0piYlkKQPhj55POdlo2nxGPG87M5MxD4v4KSwL6
+            /UxfbxaSDpqP3eVdNBALEp1/UixvGpkNXmuKSUFxXAIjnU6Q0nuQ0w==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2022-06-27T16:59:40Z"
+    mac: ENC[AES256_GCM,data:qv9Vbm/O4rftipnIBYAlU/lZiXjfljBl0SzwPDfOkquonBy0NfC5XAqVw+AlbZOCuLpyOFdwOFOkxyT5lRCT8xQyQ9sGrnT3vuU7S+V4lnhwOC0Afiuv5dWde60zP4Gl/87/mgIyYtRJehY41hbuIqhqpqyplmW2o9FJhdRou6w=,iv:ppwwmcJu0klWjCUkRAvWpeRL4caL/9ZRr53gRdn8LPI=,tag:rSM8ZWFHKg3B5CKyNVmeHw==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.3
