--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
       namespace: networking
   values:
     image: 
-      name: ghcr.io/k8s-at-home/traefik
+      name: traefik
     deployment:
       enabled: true
       kind: Deployment
