--- a/cluster-v1/apps/networking/traefik/middlewares/kustomization.yaml
+++ b/cluster-v1/apps/networking/traefik/middlewares/kustomization.yaml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cert-manager
-  - system-upgrade-controller
- #  - traefik
+  # - error-pages.yaml
+  - cloudflare-only.yaml
+  - internal-only.yaml
