--- a/cluster-v1/core/namespaces/kustomization.yaml
+++ b/cluster-v1/core/namespaces/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - cert-manager.yaml
   # - metallb-system.yaml
   - networking.yaml
-  - system-upgrade.yaml
+  # - system-upgrade.yaml
   - monitoring.yaml
   - production.yaml
