--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -13,3 +13,5 @@ kubernetes:
           ansible_host: 192.168.50.105
         k3s-worker-03:
           ansible_host: 192.168.50.78
+        k3s-worker-04:
+          ansible_host: 192.168.50.63
