--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   # - system-upgrade
   - default
-  - kube-system
+  # - kube-system
   - monitoring
   - ladder
   - networking
