--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -15,3 +15,5 @@ kubernetes:
           ansible_host: 192.168.50.78
         k3s-worker-04:
           ansible_host: 192.168.50.63
+        k3s-worker-05:
+          ansible_host: 192.168.50.173
