--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -9,12 +9,11 @@ spec:
   chart:
     spec:
       chart: traefik
-      version: 10.23.0
+      version: 10.22.0
       sourceRef:
         kind: HelmRepository
         name: traefik
         namespace: flux-system
-        version: latest
       interval: 15m
   install:
     createNamespace: true
@@ -25,14 +24,11 @@ spec:
       retries: 5
   dependsOn:
     - name: cert-manager
-      namespace: cert-manager
+      namespace: kube-system
     - name: metallb
       namespace: networking
   values:
-    image: 
-      name: traefik
     deployment:
-      enabled: true
       kind: Deployment
       replicas: 1
     service:
@@ -41,7 +37,6 @@ spec:
       annotations:
         metallb.universe.tf/loadBalancerIPs: |-
           ${METALLB_TRAEFIK_ADDR}
-        external-dns.alpha.kubernetes.io/hostname: "ipv4.${SECRET_DOMAIN}"
       spec:
         externalTrafficPolicy: Local
     logs:
@@ -57,14 +52,14 @@ spec:
       fallbackApiVersion: v1
     ingressRoute:
       dashboard:
-        enabled: true
+        enabled: false
     globalArguments:
       - "--api.insecure=true"
       - "--serverstransport.insecureskipverify=true"
       - "--providers.kubernetesingress.ingressclass=traefik"
       - "--metrics.prometheus=true"
       - "--metrics.prometheus.entryPoint=metrics"
-      - "--entryPoints.websecure.forwardedHeaders.trustedIPs=192.168.50.0/24,10.0.0.0/8,192.168.0.0/16,172.16.0.0/12,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,104.16.0.0/13,104.24.0.0/14,108.162.192.0/18,131.0.72.0/22,141.101.64.0/18,162.158.0.0/15,172.64.0.0/13,173.245.48.0/20,188.114.96.0/20,190.93.240.0/20,197.234.240.0/22,198.41.128.0/17,2400:cb00::/32,2606:4700::/32,2803:f800::/32,2405:b500::/32,2405:8100::/32,2a06:98c0::/29,2c0f:f248::/32"
+      - "--entryPoints.websecure.forwardedHeaders.trustedIPs=10.0.0.0/8,192.168.0.0/16,172.16.0.0/12,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,104.16.0.0/13,104.24.0.0/14,108.162.192.0/18,131.0.72.0/22,141.101.64.0/18,162.158.0.0/15,172.64.0.0/13,173.245.48.0/20,188.114.96.0/20,190.93.240.0/20,197.234.240.0/22,198.41.128.0/17,2400:cb00::/32,2606:4700::/32,2803:f800::/32,2405:b500::/32,2405:8100::/32,2a06:98c0::/29,2c0f:f248::/32"
     additionalArguments:
       - "--providers.kubernetesingress.ingressendpoint.ip=${METALLB_TRAEFIK_ADDR}"
       - "--providers.kubernetesingress.allowexternalnameservices=true"
