--- a/cluster/apps/default/echo-server/helm-release.yaml
+++ b/cluster/apps/default/echo-server/helm-release.yaml
@@ -71,8 +71,8 @@ spec:
           cert-manager.io/cluster-issuer: "letsencrypt-staging"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
           external-dns/is-public: "true"
-          hajimari.io/enable: "true"
-          hajimari.io/icon: "video-input-antenna"
+          # hajimari.io/enable: "true"
+          # hajimari.io/icon: "video-input-antenna"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflare-only@kubernetescrd"
         hosts:
