--- a/cluster/apps/networking/traefik/dashboard/ingress.yaml
+++ b/cluster/apps/networking/traefik/dashboard/ingress.yaml
@@ -6,9 +6,9 @@ metadata:
   namespace: networking
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-staging"
-    hajimari.io/appName: "traefik"
-    hajimari.io/enable: "true"
-    hajimari.io/icon: "web"
+    # hajimari.io/appName: "traefik"
+    # hajimari.io/enable: "true"
+    # ajimari.io/icon: "web"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
 spec:
