--- a/cluster/apps/monitoring/flux/secret.sops.yaml
+++ b/cluster/apps/monitoring/flux/secret.sops.yaml
@@ -3,7 +3,7 @@ data:
     address: ENC[AES256_GCM,data:OPGm0pX3+Un6esus6yFHf6x+WKMZm7k7k3br0SSgZLwEKDJmdTm1SRd7+j8RuOE6T71NxxywerPKdDFSafL5PNKMpOxcuW1a+orC0K7jykLNDE9JskeZOutfZZFuvFz8CzfFjn5X9W6x0gDpz1fo98XWPNumKg2D,iv:25brjfX7RORwTYYibDH1hEP4zdNFYr9MDupOhtiw7w0=,tag:Yg4j/hUVVzmWBXb5Vgs+zw==,type:str]
 kind: Secret
 metadata:
-    name: discord-webhook-url
+    name: discord-webhook
     namespace: monitoring
 sops:
     kms: []
