--- a/cluster/apps/monitoring/flux/notification.yaml
+++ b/cluster/apps/monitoring/flux/notification.yaml
@@ -3,20 +3,20 @@ apiVersion: notification.toolkit.fluxcd.io/v1beta1
 kind: Provider
 metadata:
   name: discord
-  namespace: flux-system
+  namespace: monitoring
 spec:
   type: discord
   # username: fluxbot
   channel: alerts
   secretRef:
-    name: discord-webhook-url
-    namespace: flux-system
+    name: discord-webhook
+    namespace: monitoring
 ---
 apiVersion: notification.toolkit.fluxcd.io/v1beta1
 kind: Alert
 metadata:
   name: on-call-webapp
-  namespace: flux-system
+  namespace: monitoring
 spec:
   summary: "anton"
   providerRef:
