--- a/cluster/apps/ladder/database/mysql-secret.sops.yaml
+++ b/cluster/apps/ladder/database/mysql-secret.sops.yaml
@@ -1,8 +1,27 @@
----
 apiVersion: v1
 data:
-  password: PASSWORD
+    password: ENC[AES256_GCM,data:FOVoxAwikOuD/1f+5JOcS+h9aLw+EeBswV9LCxDfFQnF8Bh5bLTvddc554rFJtwgQM/OjV97ShRwKwaGsDaCf/YtWkMJEapv,iv:wrGCnAHkoZoLAFueMAsPJYZmXM60PF/G1k4w3y/Nwao=,tag:EvEAHueWFfxvnKidHKdpjQ==,type:str]
 kind: Secret
 metadata:
     name: mysql-secrets
     namespace: prod
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrTmI1Z2l1YmZnUTZZMzBx
+            R3gzY04zM01LUDVyYisxNEM5WDkvWmNTbkJNClVkd0xqSHBZbjVUNTRTZkd5UDQr
+            Zi9ZMmdhRERRb1IxU2JkeDh0dVlDQTgKLS0tIHhQWldqOUJicGdLR1k0dVJhK2Ev
+            Mk5kOTR1Si96RzJ6dnFQS3Exb1hKU1kK8Z4PtogM1JxagGY+ICOlMvUGWAGi2XJx
+            sz5VNAcFffKqR2YP0aEopHG7uRFvNWN4RJRaYPYN21WW/MGTeu/EXA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2022-06-30T13:45:52Z"
+    mac: ENC[AES256_GCM,data:7QhRsZKqpDil/A+yB8RiFHb9YPCg8tArXJBm8J6V6EN6jmA3eRf9GL6rZHdl6ERlGUDymlEN4iqIkTI93rek74x7SZ6FjEAijC/4rsB15j3T9B3g+7hVjJAINhM+vL6Q8kjMFEgzFuFHdVPgxWqgolCEXJbvdyahVcQr6LF5iIM=,iv:pOgEhXt4PGQVsGOFi2J08captGQ3YTk7xQtMkxOVTnI=,tag:TGpLfIV6Rxw0TgE17PDCXg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.3
