--- a/cluster/apps/monitoring/flux/secret.sops.yaml
+++ b/cluster/apps/monitoring/flux/secret.sops.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 data:
-    address: ENC[AES256_GCM,data:OPGm0pX3+Un6esus6yFHf6x+WKMZm7k7k3br0SSgZLwEKDJmdTm1SRd7+j8RuOE6T71NxxywerPKdDFSafL5PNKMpOxcuW1a+orC0K7jykLNDE9JskeZOutfZZFuvFz8CzfFjn5X9W6x0gDpz1fo98XWPNumKg2D,iv:25brjfX7RORwTYYibDH1hEP4zdNFYr9MDupOhtiw7w0=,tag:Yg4j/hUVVzmWBXb5Vgs+zw==,type:str]
+    webhook: ENC[AES256_GCM,data:4/utNjkD3E9bz52Ma3aBpNJexcMEKZXFHdMTyTqqDxGeteJ3ZFwICyMAFD3DtZd4Ux/OKvvFimKCnl1pSS/DMatC6uCPsvYZKPIZ/dku17M7QpZhYn0QB8LD0mWCZh63zWHYFIxd2CYMj1OUSRz7RAQ5qrRsWUDm,iv:/iFEhCEzzw3898GOOaEKBqbqyLpzbtn0phTo+yWu+oA=,tag:BNCPAXa6cVeQhTmK2p1+eQ==,type:str]
 kind: Secret
 metadata:
+    creationTimestamp: null
     name: discord-webhook
     namespace: monitoring
 sops:
@@ -14,14 +15,14 @@ sops:
         - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3SjhPdDdtaXBZSnhPRFYr
-            NnlESXNMdW8zV2ZaOEN1MGV2a3krdVBrNVFFCjNUd1hyRTZIUUl3VjdZN25IR0Ri
-            TUt4OGNSSGNORmdublB3WGJSVHVXdWsKLS0tIGlkS0orRWtBU0NUZnJVNVlaVzla
-            YzBOOFBMaUNMc2RpSmR4cVlhOStveHcKHU6lEki8JRBCC4d5uTdP/A5BEXNjBkX+
-            4MdH13K3IRnzsSdF7dzr4qZwrswYzfJi64K9Bo2o9qfs0bEd7zxeTQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBaTZKekc2dk55cGVGa05a
+            MTd6b1ZkVlBweFFOd0poc0JKSnl1a2cyTUd3CnoyRktockVmNkIwc2FWZkNXUDlK
+            dStLZ0ZHbzNOTXlHWjR6L2taUG1KNEkKLS0tIDh6ZFFSRW1jNjhESzlya2RMTVox
+            ZnBvQ1VQYSs4KzU4TmFpSGNVUVlJMEUKGYqNV8q86e2DW1T7W+j+W2WyLRET7ZRK
+            U/ofkmiA/UjIgAc9ANzQhK66KkP9W+PsDxtYVBeKIG/NVXIa1CHh+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-27T17:14:30Z"
-    mac: ENC[AES256_GCM,data:VVwsR/VZyvwHED1oXenMdFwx/q/NlCqnSpn8NctJsNF6DqVTYLrj4xHCA6VP6Yv04+0W6SuGJmFQn7Eul3QgcNXF2rdXVqatKiVu3zXCgUfF5hrHqDZMzp53w+RxacVS4fNFMQ0LEkYMsm4IuPAC0FIkalqMFi0VEgdYlLYX8b8=,iv:dg0WT0s8HWYkf0BOKoR1f0FqJnOV4si+xcxFzaiNEtM=,tag:w0hcE9kcwMmPsgtjhWsYZQ==,type:str]
+    lastmodified: "2022-06-30T13:50:32Z"
+    mac: ENC[AES256_GCM,data:eFoK1ZntFIV/ReckSAu/zSNqAcm6rGAlvvzB9o8nIBPNR4CoDdu7q0fNzjAuHaAub7wQUR/+i/9mkgsddcEIkxT3x+m2+p31LIQT/HqQEuPZTxJOHEhy7EDHlG/pQjN6pT1iRwvOzfcQGiFVYky1Ed4se+JJpbZV6/32WF9deQU=,iv:ddPro20Mxn4nJgQC6LiB8IFE7dPr62cgvEtxJdnkDA8=,tag:YMFsZdhUAS2rT1T0Dqt9lA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
