--- a/cluster/apps/ladder/database/mysql-deployment.yaml
+++ b/cluster/apps/ladder/database/mysql-deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql-deployment
+  namespace: prod
   labels:
     app: mysql
 spec:
@@ -44,6 +45,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql-initdb-config
+  namespace: prod
 data:
   init.sql: |
     CREATE DATABASE IF NOT EXISTS ladder;
@@ -56,6 +58,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-data-disk
+  namespace: prod
 spec:
   accessModes:
     - ReadWriteOnce
