--- a/client/package.json
+++ b/client/package.json
@@ -2,23 +2,29 @@
   "name": "upsite",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "browserify-zlib": "^0.2.0",
+    "express": "^4.18.1",
     "history": "^5.3.0",
+    "nodemon": "^2.0.18",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-button": "^1.2.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nodemon site.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.7.4"
   }
 }
