--- a/client/package.json
+++ b/client/package.json
@@ -1,47 +1,16 @@
 {
-  "name": "upsite",
-  "version": "0.1.0",
+  "name": "client",
+  "version": "0.0.0",
   "private": true,
-  "proxy": "http://localhost:8080",
-  "dependencies": {
-    "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
-    "browserify-zlib": "^0.2.0",
-    "express": "^4.18.1",
-    "history": "^5.3.0",
-    "nodemon": "^2.0.18",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.4.0",
-    "react-bootstrap-validation": "^0.1.11",
-    "react-button": "^1.2.1",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "stream-browserify": "^3.0.0"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "nodemon site.js"
+    "start": "node ./bin/www"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "typescript": "^4.7.4"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
