--- a/cluster/apps/networking/kustomization.yaml
+++ b/cluster/apps/networking/kustomization.yaml
@@ -2,7 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kube-system
-  - networking
-  - monitoring
-  - ladder
+  - metallb
+  - external-dns
+  - k8s-gateways
