--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,42 @@
 {
-  "name": "client",
-  "version": "0.0.0",
+  "name": "upsite",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
+  "proxy": "http://localhost:5000",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
+    "history": "^5.3.0",
+    "nodemon": "^2.0.18",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-button": "^1.2.1",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "nodemon site.js"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
