--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "history": "^5.3.0",
+    "kill-port": "^2.0.1",
     "nodemon": "^2.0.18",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
