--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "history": "^5.3.0",
+    "ipfs-http-client": "^57.0.3",
     "kill-port": "^2.0.1",
     "nodemon": "^2.0.18",
     "react": "^18.1.0",
@@ -16,7 +17,8 @@
     "react-button": "^1.2.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
