--- a/client/server/package.json
+++ b/client/server/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "serve": "nodemon server.js",
     "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "crypto": "^1.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.4",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.19",
+    "uuid": "^3.4.0"
   }
 }
