--- a/client/server/Dockerfile
+++ b/client/server/Dockerfile
@@ -1,10 +1,8 @@
 FROM node:16.14-alpine
-# ENV NODE_ENV=production
 WORKDIR /client/server
-ENV PATH="./node_modules/.bin:$PATH"
-# COPY ["package.json", "package-lock.json*", "./"]
-# RUN npm install --production
-# RUN npm install
-COPY . .
+# ENV PATH="./node_modules/.bin:$PATH"
+COPY package*.json ./
 RUN npm install 
+COPY . .
+EXPOSE 5000
 CMD [ "npm", "serve" ]
