--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:16.14-alpine
-WORKDIR /client/server
-# ENV PATH="./node_modules/.bin:$PATH"
+WORKDIR /server
+ENV PATH="./node_modules/.bin:$PATH"
 COPY package*.json ./
 RUN npm install 
 COPY . .
-EXPOSE 5000
+EXPOSE 4000
 CMD [ "npm", "serve" ]
