--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,8 @@
 FROM node:16.14-alpine
 WORKDIR /server
-RUN npm install 
-
 ENV PATH="./node_modules/.bin:$PATH"
-COPY package*.json ./
+# COPY package*.json ./
 COPY . .
+RUN npm install
 EXPOSE 4000
 CMD [ "npm", "serve" ]
