--- a/cluster/apps/ladder/backend/backend-deployment.yaml
+++ b/cluster/apps/ladder/backend/backend-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   name: backend-deployment
   namespace: prod
 spec:
+  replicas: 3
   selector:
     matchLabels:
       component: backend
