--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.4.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
+    "routes": "^2.1.0",
     "uuid": "^3.4.0"
   }
 }
