--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "routes": "^2.1.0",
+    "secret-key": "^1.5.1",
     "uuid": "^3.4.0"
   }
 }
