--- a/cluster/apps/ladder/frontend/frontend-deployment.yaml
+++ b/cluster/apps/ladder/frontend/frontend-deployment.yaml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   labels:
     app: frontend
-  name: frontend
+  name: frontend-deployment
   namespace: prod
 spec:
   replicas: 3
