--- a/cluster/apps/ladder/backend/backend-service.yaml
+++ b/cluster/apps/ladder/backend/backend-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service 
 metadata:
-  name: server-service
+  name: backend-service
   namespace: prod
   labels: 
     app: backend
