--- a/cluster/apps/ladder/backend/backend-service.yaml
+++ b/cluster/apps/ladder/backend/backend-service.yaml
@@ -7,9 +7,9 @@ metadata:
   labels: 
     app: backend
 spec: 
-  type: ClusterIP
   selector: 
     app: backend
+  type: LoadBalancer
   ports: 
   - prototcol: TCP
     port: 4000
