--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^2.0.0",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.1",
+    "form-data": "^4.0.0",
     "mongoose": "^6.4.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
