--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,10 @@ services:
       - "3000:3000"
     stdin_open: true
     tty: true
+  server:
+    build: ./server
+    container_name: server_c
+    ports:
+      - "4000:4000"
+    stdin_open: true
+    tty: true
