--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -3,6 +3,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ladder-ingress
+  annotations: 
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
   namespace: prod
   creationTimestamp: {}
   generation: 1
@@ -12,6 +14,14 @@ spec:
   - host: icoolyousuck.com
     http:
       paths:
+      - path: /?(.*)
+        backend:
+          serviceName: backend-service 
+          servicePort: 4000
+      - path: /api/?(.*)
+        backend:
+          serviceName: frontend-service
+          servicePort: 3000
       - backend:
           service:
             name: frontend-service
