--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -11,8 +11,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-  - host: icoolyousuck.com
-    http:
+  - http:
       paths:
       - path: /?(.*)
         backend:
