--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -1,34 +1,20 @@
 ---
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1 
 kind: Ingress
 metadata:
-  name: ladder-ingress
-  annotations: 
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+  name: ladder-ingress.yaml
   namespace: prod
-  creationTimestamp: {}
-  generation: 1
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
-  ingressClassName: traefik
   rules:
   - http:
       paths:
-      - path: /?(.*)
-        backend:
-          serviceName: backend-service 
-          servicePort: 4000
-      - path: /api/?(.*)
-        backend:
-          serviceName: frontend-service
-          servicePort: 3000
-      - backend:
-          service:
-            name: frontend-service
-            port:
-              number: 30000
-        path: /
-        pathType: Prefix
-  tls:
-  - hosts:
-    - icoolyousuck.com
-    secretName: ladder-tls
+        - path: /?(.*)
+          backend:
+            serviceName: frontend-service
+            servicePort: 3000
+        - path: /api/?(.*)
+          backend:
+            serviceName: backend-service
+            servicePort: 4000
