--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1beta1 
 kind: Ingress
 metadata:
-  name: ladder-ingress.yaml
+  name: ladder-ingress
   namespace: prod
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
