--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,13 +2,11 @@ FROM node:16.14-alpine as build-stage
 # ENV NODE_ENV=production
 WORKDIR /client
 ENV PATH="./node_modules/.bin:$PATH"
-RUN npm install --production
+RUN npm install
 # COPY ["package.json", "package-lock.json*", "./"]
 # RUN npm install --production
 # RUN npm install
 COPY . .
 # ENV REACT_APP_baseAPIURL=<backend-app-service-ip>:<port>
-RUN npm build 
-FROM nginx:alpine
-COPY --from=build-stage /client/build /usr/share/nginx/html
-EXPOSE 80
+EXPOSE 3000
+CMD ["npm", "start"]
