--- a/cluster/apps/ladder/backend/backend-service.yaml
+++ b/cluster/apps/ladder/backend/backend-service.yaml
@@ -9,7 +9,7 @@ metadata:
 spec: 
   selector: 
     app: backend
-  type: LoadBalancer
+  type: NodePort
   ports: 
   - prototcol: TCP
     port: 4000
