client dockerfile fixes

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,10 @@
-FROM node:16.14-alpine as build-stage 
+FROM node:16.14-alpine
 # ENV NODE_ENV=production
 WORKDIR /client
-RUN npm install
 ENV PATH="./node_modules/.bin:$PATH"
-
 # COPY ["package.json", "package-lock.json*", "./"]
 # RUN npm install --production
 # RUN npm install
 COPY . .
-# ENV REACT_APP_baseAPIURL=<backend-app-service-ip>:<port>
-EXPOSE 3000
-CMD ["npm", "start"]
+RUN npm install 
+CMD [ "npm", "run", "start" ]
