--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -5,7 +5,11 @@ metadata:
   name: ladder-ingress
   namespace: prod
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nkubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$
+    cert-manager.io/cluster-issuer: "letsencrypt-staging"
+
 spec:
   rules:
   - http:
