--- a/cluster/apps/ladder/frontend/frontend-service.yaml
+++ b/cluster/apps/ladder/frontend/frontend-service.yaml
@@ -7,9 +7,9 @@ metadata:
 spec:
   selector:
     app: frontend
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 3000
     targetPort: 3000
-    nodePort: 30000 # between 30k and 32k
+    # nodePort: 30000 # between 30k and 32k
 
