--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -15,7 +15,7 @@ spec:
   - http:
       paths:
         - path: /?(.*)
-          backend:
+          frontend:
             serviceName: frontend-service
             servicePort: 3000
         - path: /api/?(.*)
