--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -12,13 +12,19 @@ metadata:
 
 spec:
   rules:
-  - http:
-      paths:
-        - path: /?(.*)
-          frontend:
-            serviceName: frontend-service
-            servicePort: 3000
-        - path: /api/?(.*)
-          backend:
-            serviceName: backend-service
-            servicePort: 4000
+    - http:
+        paths:
+          - path: /?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 3000
+          - path: /api/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: backend-service
+                port:
+                  number: 4000
