--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -16,7 +16,7 @@ spec:
         paths:
           - path: /?(.*)
             pathType: Prefix
-            backend:
+            frontend:
               service:
                 name: frontend-service
                 port:
