--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -11,6 +11,7 @@ metadata:
     cert-manager.io/cluster-issuer: "letsencrypt-staging"
 
 spec:
+  hostname: icoolyousuck.com
   rules:
     - http:
         paths:
