--- a/cluster/apps/ladder/frontend/frontend-service.yaml
+++ b/cluster/apps/ladder/frontend/frontend-service.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   selector:
     app: frontend
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 3000
     targetPort: 3000
