--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -1,22 +1,19 @@
----
-apiVersion: networking.k8s.io/v1 
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ladder-ingress
+  name: ladder-ingress 
   namespace: prod
   annotations:
-    nkubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$
-    cert-manager.io/cluster-issuer: "letsencrypt-staging"
-
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
     - http:
         paths:
           - path: /?(.*)
             pathType: Prefix
-            frontend:
+            backend:
               service:
                 name: frontend-service
                 port:
