--- a/cluster/apps/networking/nginx-ingress/helm-release.yaml
+++ b/cluster/apps/networking/nginx-ingress/helm-release.yaml
@@ -11,7 +11,7 @@ spec:
       chart: ingress-nginx
       sourceRef:
         kind: HelmRepository
-        name: ingress-nginx-charts
+        name: ingress-nginx
         namespace: flux-system
   install:
     createNamespace: true
