--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon server.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "startt": "node index2.js"
   },
   "keywords": [],
   "author": "",
