--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+
 spec:
   rules:
     - http:
@@ -18,7 +19,7 @@ spec:
                 name: frontend-service
                 port:
                   number: 3000
-          - path: /api/(.*)
+          - path: /api/?(.*)
             pathType: Prefix
             backend:
               service:
