--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -19,7 +19,7 @@ spec:
                 name: frontend-service
                 port:
                   number: 3000
-          - path: /api/?(.*)
+          - path: /api/(.*)
             pathType: Prefix
             backend:
               service:
