--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index2.js",
   "scripts": {
     "serve": "nodemon server.js",
-    "start": "node index.js",
-    "startt": "node index2.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
